--- a/asm/Makefile
+++ b/asm/Makefile
@@ -4,3 +4,6 @@ hello: hello.o
 	   gcc -o hello hello.o -no-pie
 hello.o: hello.asm
 	    nasm -f elf64 -g -F dwarf hello.asm -l hello.lst
+
+# TODO:
+# Add some comments to the commands above 
